--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<title>Weather App</title>
 </head>
 <body>
+	<form action="/" method="post">
+		<label for="cityInput">CityName</label>
+		<input id="cityInput" type="text" name="cityName">
+		<button type="submit">Go</button>
+	</form>
 
 <script src="main.js"></script>
 </body>
